Updated to be more in line with developer site style
- Smaller header separator
- Header separator now brown
- Heading now in bold and larger font
- Heading a section spacing made to match developer site
- Content font size increased 2px

--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -22,9 +22,7 @@
     <!--<![endif]-->
 </head>
 <body>
-<header>
-    <a class="skiplink" href="#main" tabindex="0">Skip to main content</a>
-
+<header class="border-bottom--iron-sm border-bottom--iron-md">
     <div class="wrapper">
         <div class="header col-wrap">
             <div class="col col--lg-one-third col--md-one-third">
@@ -41,14 +39,12 @@
             </div>
         </div>
     </div>
-    <div class="header--separator">
-    </div>
 </header>
 
 <div class="main main--sticky-footer-offset">
     <div class="page-header slate">
         <div class="wrapper">
-            <h1 class="page-header__title flush--half--bottom">Sorry, there is a problem with the service</h1>
+            <h1 class="break-word margin-top-sm--3 margin-bottom-sm--3"><strong>Sorry, there is a problem with the service</strong></h1>
         </div>
     </div>
     <div class="wrapper panel--mar">
@@ -57,7 +53,7 @@
                 <article>
                     <div class="box box--padded box--red-dark box--red-dark--separated-left sectioned">
                         <div class="grid-wrap">
-                            <div class="grid-col desktop-grid-two-thirds">
+                            <div class="grid-col desktop-grid-two-thirds adjust-font-size--16">
                                 <p>Please try again later.</p>
                                 <p>If the problem persists, check our <a href="https://twitter.com/ONS">twitter</a> feed
                                     for
