--- a/assets/html/error-pages/rate-limiting.html
+++ b/assets/html/error-pages/rate-limiting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Internal server error - Office for National Statistics</title>
+    <title>Rate limiting - Office for National Statistics</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
     <meta content="width=device-width,initial-scale=1.0,user-scalable=1" name="viewport">
