Update title and fix axe warnings

--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Internal server error - Office for National Statistics</title>
+    <title>Service error - Office for National Statistics</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
     <meta content="width=device-width,initial-scale=1.0,user-scalable=1" name="viewport">
@@ -41,7 +41,7 @@
     </div>
 </header>
 
-<div class="main main--sticky-footer-offset">
+<main class="main main--sticky-footer-offset">
     <div class="page-header slate">
         <div class="wrapper">
             <h1 class="break-word margin-top-sm--3 margin-bottom-sm--3"><strong>Sorry, there is a problem with the service</strong></h1>
@@ -68,7 +68,7 @@
             </div>
         </div>
     </div>
-</div>
+</main>
 <footer class="print--hide">
     <h2 class="visuallyhidden">Footer links</h2>
     <div class="footer footer--sticky">
@@ -76,7 +76,7 @@
             <nav>
                 <div class="footer-nav col-wrap">
                     <div class="col col--lg-one-third col--md-one-third">
-                        <h3 class="footer-nav__heading">Connect with us</h3>
+                        <h2 class="footer-nav__heading font-size--h3">Connect with us</h3>
                         <ul class="footer-nav__list">
                             <li class="footer-nav__item">
                                 <a href="https://twitter.com/ONS" class="icon--hide" target="_blank">Twitter</a>
