--- a/assets/html/error-pages/service-unavailable.html
+++ b/assets/html/error-pages/service-unavailable.html
@@ -54,7 +54,7 @@
                     <div class="box box--padded box--red-dark box--red-dark--separated-left sectioned">
                         <div class="grid-wrap">
                             <div class="grid-col desktop-grid-two-thirds adjust-font-size--16">
-                                <p>The ONS Digital blog is unavailable while we make them accessible for our users.</p>
+                                <p>The ONS Digital blog is unavailable while we make it accessible for our users.</p>
                                 <p>Please check back again on 9 October 2020.</p>
                                 <p>Please visit <a href="https://www.ons.gov.uk/">the ONS website</a> for our latest statistics or <a href="mailto:customise.my.data@ons.gov.uk">contact us for more information about the ONS API</a>.</p>
                                 <p>Thank you</p>
