Updating the email address and adding links

--- a/assets/html/error-pages/rate-limiting.html
+++ b/assets/html/error-pages/rate-limiting.html
@@ -57,7 +57,12 @@
                             <div class="grid-col desktop-grid-two-thirds adjust-font-size--16">
                                 <p>You will be able to access this page again in <span class="font-weight-700">59 seconds</span>. Please <span class="font-weight-700"><a href="">refresh the page</a></span> after this time to view it.</p>
                                 <p>Your browser has sent a high number of requests to this page, which is affecting how the website works for all users.</p>
-                                <p>If you need help or this continues to stop you from accessing the page please contact <a href="mailto:digitalpublishing@ons.gov.uk">digitalpublishing@ons.gov.uk</a>.</p>
+                                <p>For further information about rate limiting please see the following for reference:</p>
+                                <ul>
+                                    <li><a href="https://www.ons.gov.uk/help/fairusepolicy">Fair use policy</a></li>
+                                    <li><a href="https://developer.ons.gov.uk/bots/">Guide to rate limiting and bot development</a></li>
+                                </ul>
+                                <p>If you need help or this continues to stop you from accessing the page please contact <a href="mailto:sharedcustomercontactcentre@ons.gov.uk">sharedcustomercontactcentre@ons.gov.uk</a>.</p>
                             </div>
                         </div>
                     </div>
