--- a/assets/html/error-pages/rate-limiting.html
+++ b/assets/html/error-pages/rate-limiting.html
@@ -1,119 +1,214 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Rate limiting - Office for National Statistics</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta charset="utf-8"/>
-    <meta content="width=device-width,initial-scale=1.0,user-scalable=1" name="viewport">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="theme-color" content="#58595B">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#58595B">
-    <meta http-equiv="refresh" content="60">
-    <link rel="shortcut icon" href="https://cdn.ons.gov.uk/assets/images/favicon.ico" type="image/x-icon">
+<html lang="en">
 
-    <!--[if IE]><![endif]-->
-    <!--[if lte IE 8]>
-    <link rel="stylesheet" href="https://cdn.ons.gov.uk/sixteens/b6c1f18/css/old-ie.css">
-    <![endif]-->
-    <!--[if IE 9]>
-    <link rel="stylesheet" href="https://cdn.ons.gov.uk/sixteens/b6c1f18/css/ie-9.css">
-    <![endif]-->
-    <!--[if gt IE 9]><!-->
-    <link rel="stylesheet" href="https://cdn.ons.gov.uk/sixteens/b6c1f18/css/main.css">
-    <!--<![endif]-->
-</head>
-<body>
-<header class="border-bottom--iron-sm border-bottom--iron-md">
-    <div class="wrapper">
-        <div class="header col-wrap">
-            <div class="col col--lg-one-third col--md-one-third">
-                <a id="logo-link" href="/">
-                    <!--[if lte IE 8]>
-                    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.png"
-                         alt="Office for National Statistics">
-                    <![endif]-->
-                    <!--[if gte IE 9]><!-->
-                    <img class="logo" src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg"
-                         alt="Office for National Statistics">
-                    <!--<![endif]-->
-                </a>
-            </div>
-        </div>
-    </div>
-</header>
+    <head>
+        <title>
+            Rate limited - too many HTTP requests
+        </title>
 
-<div class="main main--sticky-footer-offset">
-    <div class="page-header slate">
-        <div class="wrapper">
-            <h1 class="break-word margin-top-sm--3 margin-bottom-sm--3 font-weight-700">Sorry, we have temporarily limited your access to this page</h1>
-        </div>
-    </div>
-    <div class="wrapper panel--mar">
-        <div class="grid-wrap">
-            <div class="grid-col desktop-grid-full-width">
-                <article>
-                    <div class="box box--padded box--red-dark box--red-dark--separated-left sectioned">
-                        <div class="grid-wrap">
-                            <div class="grid-col desktop-grid-two-thirds adjust-font-size--16">
-                                <p>You will be able to access this page again in <span class="font-weight-700">59 seconds</span>. Please <span class="font-weight-700"><a href="">refresh the page</a></span> after this time to view it.</p>
-                                <p>Your browser has sent a high number of requests to this page, which is affecting how the website works for all users.</p>
-                                <p>For further information about rate limiting please see the following for reference:</p>
-                                <ul>
-                                    <li><a href="https://www.ons.gov.uk/help/fairusepolicy">Fair use policy</a></li>
-                                    <li><a href="https://developer.ons.gov.uk/bots/">Guide to rate limiting and bot development</a></li>
-                                </ul>
-                                <p>If you need help or this continues to stop you from accessing the page please contact <a href="mailto:sharedcustomercontactcentre@ons.gov.uk">sharedcustomercontactcentre@ons.gov.uk</a>.</p>
+        <meta charset="utf-8">
+        <meta
+            content="width=device-width,initial-scale=1.0,user-scalable=1"
+            name="viewport"
+        >
+        <meta
+            name="format-detection"
+            content="telephone=no"
+        >
+        <meta
+            name="theme-color"
+            content="#58595B"
+        >
+        <meta
+            name="apple-mobile-web-app-status-bar-style"
+            content="#58595B"
+        >
+
+        <link
+            rel="stylesheet"
+            href="https://cdn.ons.gov.uk/dp-design-system/a19df14/css/main.css"
+        >
+        <link
+            rel="shortcut icon"
+            href="https://cdn.ons.gov.uk/assets/images/favicon.ico"
+            type="image/x-icon"
+        >
+    </head>
+
+    <body>
+        <div class="ons-page">
+            <div class="ons-page__content">
+                <header class="ons-u-bb">
+                    <div class="wrapper">
+                        <div class="header col-wrap">
+                            <div class="col col--lg-one-third col--md-one-third">
+                                <a
+                                    id="logo-link"
+                                    href="/"
+                                >
+                                    <img
+                                        class="logo"
+                                        src="https://cdn.ons.gov.uk/assets/images/ons-logo/v2/ons-logo.svg"
+                                        alt="Office for National Statistics"
+                                    >
+                                </a>
                             </div>
                         </div>
                     </div>
-                </article>
-            </div>
-        </div>
-    </div>
-</div>
-<footer class="print--hide">
-    <h2 class="visuallyhidden">Footer links</h2>
-    <div class="footer footer--sticky">
-        <div class="wrapper">
-            <nav>
-                <div class="footer-nav col-wrap">
-                    <div class="col col--lg-one-third col--md-one-third">
-                        <h3 class="footer-nav__heading">Connect with us</h3>
-                        <ul class="footer-nav__list">
-                            <li class="footer-nav__item">
-                                <a href="https://twitter.com/ONS" class="icon--hide" target="_blank">Twitter</a>
-                            </li>
-                            <li class="footer-nav__item">
-                                <a href="https://www.facebook.com/ONS" class="icon--hide" target="_blank">Facebook</a>
-                            </li>
-                            <li class="footer-nav__item">
-                                <a href="https://www.linkedin.com/company/office-for-national-statistics"
-                                   class="icon--hide" target="_blank">LinkedIn</a>
-                            </li>
-                            <li class="footer-nav__item">
-                                <a href="https://public.govdelivery.com/accounts/UKONS/subscribers/new"
-                                   class="icon--hide" target="_blank">Email alerts</a>
-                            </li>
-                        </ul>
+                </header>
+
+                <main>
+                    <div class="ons-page__container ons-container">
+                        <div class="ons-grid ons-u-ml-no">
+                            <div class="ons-grid__col ons-u-pl-no">
+                                <h1 class="ons-u-mt-xl ons-u-fw-b">
+                                    Temporary access block to this page
+                                </h1>
+                                <div class="ons-page__main ons-u-mt-s">
+                                    <p>
+                                        You will be able to access this page again in 59 seconds. After that time, please refresh the page to view it.
+                                    </p>
+                                    <p>
+                                        The rate at which your browser has sent a high number of requests to this page is affecting how the website works for all users.
+                                    </p>
+                                    <p>
+                                        For further information about rate limiting, visit our 
+                                        <a href="https://www.ons.gov.uk/help/fairusepolicy">
+                                            Fair use policy page
+                                        </a> 
+                                        and our 
+                                        <a href="https://developer.ons.gov.uk/bots/">
+                                            Guide to rate limiting and bot development
+                                        </a>.
+                                    </p>
+                                    <p>
+                                        If you need help or this continues to stop you from accessing the page please contact 
+                                        <a href="mailto:sharedcustomercontactcentre@ons.gov.uk">
+                                            email our Customer Contact Centre
+                                        </a>.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </nav>
-        </div>
-        <div class="wrapper">
-            <div class="footer-license">
-                <img class="footer-license__img" alt="OGL" width="60" src="https://cdn.ons.gov.uk/assets/images/ogl.png">
-                <p class="footer-license__text margin-left-sm--0">
-                    All content is available under the <a class="icon--hide"
-                                                          href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
-                                                          target="_blank">Open Government Licence v3.0</a> <span
-                        class="icon icon-external--light-small"></span>, except where otherwise stated
-                </p>
+                </main>
+
             </div>
+            <footer class="print--hide padding-top--13">
+                <section>
+                    <h2 class="visuallyhidden">Footer links</h2>
+                    <div class="footer">
+                        <div class="wrapper">
+                            <nav aria-label="Footer links">
+                                <div class="footer-nav col-wrap">
+                                    <div class="col col--lg-one-third col--md-one-third">
+                                        <h2 class="footer-nav__heading">Connect with us</h2>
+                                        <ul class="footer-nav__list">
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://twitter.com/ONS"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >Twitter</a>
+                                            </li>
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://www.instagram.com/officefornationalstatistics/"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >Instagram</a>
+                                            </li>
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://www.facebook.com/ONS"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >Facebook</a>
+                                            </li>
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://www.linkedin.com/company/office-for-national-statistics"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >LinkedIn</a>
+                                            </li>
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://consultations.ons.gov.uk/"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >Consultations</a>
+                                            </li>
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://www.statsusernet.org.uk/login"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >Discussion forums</a>
+                                            </li>
+                                            <li class="footer-nav__item">
+                                                <a
+                                                    href="https://public.govdelivery.com/accounts/UKONS/subscribers/new"
+                                                    class="icon--hide"
+                                                    target="_blank"
+                                                >Email alerts</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </nav>
+                        </div>
+                        <div class="wrapper">
+                            <hr class="ons-footer__hr">
+                            <div class="footer-license">
+                                <svg
+                                    class="ons-footer__ogl-img"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="60px"
+                                    height="24px"
+                                    viewbox="0 0 60 24"
+                                    focusable="false"
+                                    aria-hidden="true"
+                                >
+                                    <path
+                                        d="M51.7,17.5V0l-6.2,4v19.8h13.8v-6.2H51.7z
+            M36.7,16.3c-1,0.9-2.4,1.4-3.8,1.4c-3.2,0-5.8-2.6-5.8-5.8s2.6-5.8,5.8-5.8c2,0,3.9,1.1,4.9,2.7L43,5.6C40.9,2.2,37.1,0,32.9,0c-4.5,0-8.4,2.5-10.4,6.1C20.4,2.5,16.5,0,12,0C5.4,0,0,5.4,0,12s5.4,12,12,12c4.5,0,8.4-2.5,10.4-6.1c2.1,3.6,6,6.1,10.4,6.1c3,0,5.8-1.1,7.9-3l2.4,2.7h0.4V13h-9.8L36.7,16.3zM12,17.8c-3.2,0-5.8-2.6-5.8-5.8S8.8,6.2,12,6.2s5.8,2.6,5.8,5.8S15.2,17.8,12,17.8"
+                                        fill="currentColor"
+                                    ></path>
+                                </svg>
+
+                                <p class="footer-license__text margin-left-sm--0">
+                                    All content is available under the
+                                    <a
+                                        class="ons-external-link"
+                                        href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
+                                        target="_blank"
+                                    >Open Government Licence v3.0<span class="ons-external-link__icon"><svg
+                                                class="ons-svg-icon"
+                                                viewBox="0 0 12 12"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                focusable="false"
+                                                fill="currentColor"
+                                            >
+                                                <path
+                                                    d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
+                                                    transform="translate(-2 -1.99)"
+                                                />
+                                                <path
+                                                    d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
+                                                    transform="translate(-2 -1.99)"
+                                                />
+                                            </svg></span></a>, except where otherwise stated
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="hidden">::CLOUDFLARE_ERROR_500S_BOX::</div>
+                    <div class="hidden">::CLOUDFLARE_ERROR_1000S_BOX::</div>
+                    <div class="hidden">::ALWAYS_ONLINE_NO_COPY_BOX::</div>
+                </section>
+            </footer>
         </div>
-    </div>
-    <div id="viewport-sm" class="js-viewport-size"></div>
-    <div id="viewport-md" class="js-viewport-size"></div>
-    <div id="viewport-lg" class="js-viewport-size"></div>
-</footer>
-</body>
+    </body>
+
 </html>
