Adding test text to the proposed 5xx error page

--- a/assets/html/error-pages/service-error-std.html
+++ b/assets/html/error-pages/service-error-std.html
@@ -62,15 +62,10 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for the ONS website.
+                                    Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
-                                    <p>In the meantime, you can download PDF versions of the latest prices bulletins:</p>
-                                    <ul>
-                                        <li>Consumer price inflation (PDF, XXXKB)</li>
-                                        <li>Producer price inflation (PDF, XXXKB)</li>
-                                    </ul>
-                                    <p>You can also check our X (Twitter) feed for updates.</p>
+                                    <p>Try again later.</p>
                                     <p>
                                         Our scheduled publications can also be found on our
                                         <a href="https://backup.ons.gov.uk/">backup site</a>.
