--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,7 +62,7 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for the ONS website.
+                                    There are currently a high number of requests for the ONS website. Please try again later.
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>In the meantime, you can download PDF versions of the latest prices bulletins:</p>
@@ -70,16 +70,12 @@
                                         <li>Consumer price inflation (PDF, XXXKB)</li>
                                         <li>Producer price inflation (PDF, XXXKB)</li>
                                     </ul>
-                                    <p>You can also check our X (Twitter) feed for updates.</p>
+                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">back up site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
                                     <p>
                                         Our scheduled publications can also be found on our
                                         <a href="https://backup.ons.gov.uk/">backup site</a>.
                                     </p>
-                                    <p>If you have any questions,
-                                        <a
-                                            href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
-                                            us</a>.
-                                    </p>
+                                    <p>If you have any questions you can <a href="mailto:sharedcustomercontactcentre@ons.gov.uk">email us.</a></p>
                                 </div>
                             </div>
                         </div>
