Adding URLs for bulletins 14-02-2024

--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,15 +62,16 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for the ONS website. Please try again later.
+                                    There are currently a high number of requests for the ONS website.
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
+                                    <p>Please try again later.</p>
                                     <p>In the meantime, you can download PDF versions of the latest prices bulletins:</p>
                                     <ul>
-                                        <li>Consumer price inflation (PDF, XXXKB)</li>
-                                        <li>Producer price inflation (PDF, XXXKB)</li>
+                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-14/Consumer%20price%20inflation%2C%20UK%20January%202024.pdf">Consumer price inflation (PDF, 1,590 KB)</a></li>
+                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-14/Producer%20price%20inflation%2C%20UK%20January%202024.pdf">Producer price inflation (PDF, 1,740 KB)</a></li>
                                     </ul>
-                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">back up site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
+                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
                                     <p>If you have any questions you can <a href="mailto:sharedcustomercontactcentre@ons.gov.uk">email us.</a></p>
                                 </div>
                             </div>
