--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -66,10 +66,12 @@
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>
-                                        Our scheduled publications can also be found on our
-                                        <a href="https://backup.ons.gov.uk/">backup site</a>.
-                                    </p>
+                                    <p>In the meantime, you can download PDF versions of the latest GDP bulletins:</p>
+                                    <ul>
+                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20first%20quarterly%20estimate%2C%20UK%20October%20to%20December%202023.pdf">GDP Quarterly</a> (PDF, 1,256 KB)</li>
+                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20first%20quarterly%20estimate%2C%20UK%20October%20to%20December%202023.pdf">GDP first quarterly estimate, UK October to December 2023</a> (PDF, 2,015KB)</li>
+                                    </ul>
+                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
                                     <p>If you have any questions,
                                         <a
                                             href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
