--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -68,7 +68,7 @@
                                     <p>Try again later.</p>
                                     <p>In the meantime, you can download PDF versions of the latest GDP bulletins:</p>
                                     <ul>
-                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20first%20quarterly%20estimate%2C%20UK%20October%20to%20December%202023.pdf">GDP Quarterly</a> (PDF, 1,256 KB)</li>
+                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20monthly%20estimate%2C%20UK%20December%202023.pdf">GDP monthly estimate, UK December 2023</a> (PDF, 1,256 KB)</li>
                                         <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20first%20quarterly%20estimate%2C%20UK%20October%20to%20December%202023.pdf">GDP first quarterly estimate, UK October to December 2023</a> (PDF, 2,015KB)</li>
                                     </ul>
                                     <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
