--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,16 +62,14 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for this service.
+                                    Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>In the meantime, you can download PDF versions of the latest GDP bulletins:</p>
-                                    <ul>
-                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20monthly%20estimate%2C%20UK%20December%202023.pdf">GDP monthly estimate, UK December 2023</a> (PDF, 1,256 KB)</li>
-                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2023-02-15/GDP%20first%20quarterly%20estimate%2C%20UK%20October%20to%20December%202023.pdf">GDP first quarterly estimate, UK October to December 2023</a> (PDF, 2,015KB)</li>
-                                    </ul>
-                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
+                                    <p>
+                                        Our scheduled publications can also be found on our
+                                        <a href="https://backup.ons.gov.uk/">backup site</a>.
+                                    </p>
                                     <p>If you have any questions,
                                         <a
                                             href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
