--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,14 +62,12 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    Sorry, there's a problem with the service
+                                    There are currently a high number of requests for this service.
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>
-                                        Our scheduled publications can also be found on our
-                                        <a href="https://backup.ons.gov.uk/">backup site</a>.
-                                    </p>
+                                    <p>In the meantime, you can download the <a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-03-12/a01mar2024.xls">Summary of Labour Market Statistics (A01) dataset</a>.</p>
+                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
                                     <p>If you have any questions,
                                         <a
                                             href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
