Adding url for monthly GDP Jan 2024

--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -66,7 +66,10 @@
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>In the meantime, you can download the <a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-03-12/a01mar2024.xls">Summary of Labour Market Statistics (A01) dataset</a>.</p>
+                                    <p>In the meantime, you can download a PDF version of the latest GDP bulletin:</p>
+                                    <ul>
+                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-03-13/GDP-monthly-estimate-UK-January-2024.pdf?id=592648B4-C60A-44D2-A934-639D92CF4497">GDP monthly estimate, UK January 2024</a> (PDF, 1,654 KB)</li>
+                                    </ul>
                                     <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
                                     <p>If you have any questions,
                                         <a
