--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,15 +62,14 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for this service.
+                                    Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>In the meantime, you can download a PDF version of the latest GDP bulletin:</p>
-                                    <ul>
-                                        <li><a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-03-13/GDP-monthly-estimate-UK-January-2024.pdf?id=592648B4-C60A-44D2-A934-639D92CF4497">GDP monthly estimate, UK January 2024</a> (PDF, 1,654 KB)</li>
-                                    </ul>
-                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a>  or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
+                                    <p>
+                                        Our scheduled publications can also be found on our
+                                        <a href="https://backup.ons.gov.uk/">backup site</a>.
+                                    </p>
                                     <p>If you have any questions,
                                         <a
                                             href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
