--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,18 +62,14 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for the ONS website.
+                                    Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>In the meantime, you can download a PDF version of the latest price bulletins:</p>
-                                    <ul>
-                                        <li>
-                                            <a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-03-20/Consumer-price-inflation-UK-February-2024.pdf">Consumer price inflation, UK: February 2024</a> (PDF, 1,539 KB)</li>
-                                        <li>
-                                            <a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-03-20/Producer-price-inflation-UK-February-2024.pdf">Producer price inflation, UK: February 2024</a> (PDF, 1,889 KB)</li>
-                                    </ul>
-                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a> or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
+                                    <p>
+                                        Our scheduled publications can also be found on our
+                                        <a href="https://backup.ons.gov.uk/">backup site</a>.
+                                    </p>
                                     <p>If you have any questions,
                                         <a
                                             href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
@@ -175,8 +171,7 @@
                                         class="ons-external-link"
                                         href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
                                         target="_blank"
-                                    >Open Government Licence v3.0<span class="ons-external-link__icon">
-                                            <svg
+                                    >Open Government Licence v3.0<span class="ons-external-link__icon"><svg
                                                 class="ons-svg-icon"
                                                 viewBox="0 0 12 12"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -186,14 +181,12 @@
                                                 <path
                                                     d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                                                     transform="translate(-2 -1.99)"
-/>
+                                                />
                                                 <path
                                                     d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                                                     transform="translate(-2 -1.99)"
-/>
-                                            </svg>
-                                        </span>
-                                    </a>, except where otherwise stated
+                                                />
+                                            </svg></span></a>, except where otherwise stated
                                 </p>
                             </div>
                         </div>
@@ -207,3 +200,4 @@
     </body>
 
 </html>
+
