--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -65,6 +65,9 @@
                                     Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
+                                    <p>
+                                    In the meantime, you can download the <a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-04-16/A01apr2024.xls?id=ED54A80A-1BA4-4226-9352-A309F48FBB04">Summary of Labour Market Statistics (A01) dataset</a>.
+                                    </p>
                                     <p>Try again later.</p>
                                     <p>
                                         Our scheduled publications can also be found on our
