--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,17 +62,18 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    Sorry, there's a problem with the service
+                                   There are currently a high number of requests for the ONS website.
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
-                                    <p>
-                                    In the meantime, you can download the <a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-04-16/A01apr2024.xls?id=ED54A80A-1BA4-4226-9352-A309F48FBB04">Summary of Labour Market Statistics (A01) dataset</a>.
-                                    </p>
                                     <p>Try again later.</p>
-                                    <p>
-                                        Our scheduled publications can also be found on our
-                                        <a href="https://backup.ons.gov.uk/">backup site</a>.
-                                    </p>
+                                    <p>In the meantime, you can download PDF versions of the latest bulletins:</p>
+                                    <ul>
+                                        <li>
+                                            <a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-04-17/Consumer-price-inflation-UK-March-2024.pdf?id=E7183636-23C6-49C9-8E88-88253B0B41ED">Consumer Price Inflation, UK: March 2024</a> (PDF, 1,605 KB)</li>
+                                        <li>
+                                            <a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-04-17/Producer-price-inflation-UK-March-2024-including-services-January-to-March-2024.pdf?id=E4A321F5-80F0-47C7-B083-3D799B318352">Producer Price Inflation, UK: March 2024</a> (PDF, 1,987 KB)</li>
+                                    </ul>
+                                    <p>You can also find previous scheduled publications on our <a href="https://backup.ons.gov.uk/">backup site</a> or check our <a href="https://twitter.com/ONS">X (Twitter) feed</a> for updates.</p>
                                     <p>If you have any questions,
                                         <a
                                             href="https://www.ons.gov.uk/aboutus/contactus/generalandstatisticalenquiries">contact
@@ -174,7 +175,8 @@
                                         class="ons-external-link"
                                         href="http://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
                                         target="_blank"
-                                    >Open Government Licence v3.0<span class="ons-external-link__icon"><svg
+                                    >Open Government Licence v3.0<span class="ons-external-link__icon">
+                                            <svg
                                                 class="ons-svg-icon"
                                                 viewBox="0 0 12 12"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -184,12 +186,14 @@
                                                 <path
                                                     d="M13.5,9H13a.5.5,0,0,0-.5.5v3h-9v-9h3A.5.5,0,0,0,7,3V2.5A.5.5,0,0,0,6.5,2h-4a.5.5,0,0,0-.5.5v11a.5.5,0,0,0,.5.5h11a.5.5,0,0,0,.5-.5v-4A.5.5,0,0,0,13.5,9Z"
                                                     transform="translate(-2 -1.99)"
-                                                />
+/>
                                                 <path
                                                     d="M8.83,7.88a.51.51,0,0,0,.71,0l2.31-2.32,1.28,1.28A.51.51,0,0,0,14,6.49v-4a.52.52,0,0,0-.5-.5h-4A.51.51,0,0,0,9,2.52a.58.58,0,0,0,.14.33l1.28,1.28L8.12,6.46a.51.51,0,0,0,0,.71Z"
                                                     transform="translate(-2 -1.99)"
-                                                />
-                                            </svg></span></a>, except where otherwise stated
+/>
+                                            </svg>
+                                        </span>
+                                    </a>, except where otherwise stated
                                 </p>
                             </div>
                         </div>
@@ -203,4 +207,3 @@
     </body>
 
 </html>
-
