--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -67,7 +67,7 @@
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
                                     <p>In the meantime, you can download PDF versions of the latest GDP bulletin:</p>
-                                    <p><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-05-10/GDP-first-quarterly-estimate-UK-January-to-March-2024.pdf">GDP first quarterly estimate, UK: January to March 2024</a> (PDF, 1,153 KB)</p>
+                                    <p><a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-05-10/GDP-first-quarterly-estimate-UK-January-to-March-2024.pdf?id=2F6C400D-A3A0-4B11-9866-62B56CEE1EF6">GDP first quarterly estimate, UK: January to March 2024</a> (PDF, 1,153 KB)</p>
                                     <p>
                                         You can also find previous scheduled publications on our
                                         <a href="https://backup.ons.gov.uk/">backup site</a> or check our <a
