--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,11 +62,10 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for the ONS website.
+                                    Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>In the meantime, you can download the <a href="https://static.ons.gov.uk/timeseries-datasets/other/2024-05-14/A01may2024.xls?id=3EF46766-4BE5-4646-B894-4658E9E1FCCE">Summary of Labour Market Statistics (A01) dataset</a>.</p>
                                     <p>
                                         Our scheduled publications can also be found on our
                                         <a href="https://backup.ons.gov.uk/">backup site</a>.
@@ -201,4 +200,3 @@
     </body>
 
 </html>
-
