revert changes for release 20240522

--- a/assets/html/error-pages/service-error.html
+++ b/assets/html/error-pages/service-error.html
@@ -62,20 +62,10 @@
                         <div class="ons-grid ons-u-ml-no">
                             <div class="ons-grid__col ons-u-pl-no">
                                 <h1 class="ons-u-mt-xl ons-u-fw-b">
-                                    There are currently a high number of requests for the ONS website.
+                                    Sorry, there's a problem with the service
                                 </h1>
                                 <div class="ons-page__main ons-u-mt-s">
                                     <p>Try again later.</p>
-                                    <p>In the meantime, you can download PDF versions of the latest bulletins:
-                                        <ul>
-                                            <li>
-                                                <a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-05-22/Consumer-price-inflation-UK-April-2024.pdf?id=58874C7C-D999-4277-86D5-58B80B2F29D8">Consumer Price Inflation, UK: April 2024</a> (PDF, 1,561 KB)
-                                            </li>
-                                            <li>
-                                                <a href="https://static.ons.gov.uk/timeseries-datasets/bulletins/2024-05-22/Producer-price-inflation-UK-April-2024.pdf?id=65149FAA-4FE4-44DE-9ED5-399BF2112718">Producer Price Inflation, UK: April 2024</a> (PDF, 1,779 KB)
-                                            </li>
-                                        </ul>
-                                    </p>
                                     <p>
                                         Our scheduled publications can also be found on our
                                         <a href="https://backup.ons.gov.uk/">backup site</a>.
